Report draft added

--- a/report/code/cache_eviction_template.tex
+++ b/report/code/cache_eviction_template.tex
@@ -1,6 +1,6 @@
 \lstset{style=CStyle}
 
-\begin{lstlisting}[language=C, caption=Functions required for cache eviction algorithms in libCacheSim, label=code: cache-functions]
+\begin{lstlisting}[language=C, caption=Required functions for cache eviction algorithms in libCacheSim, label=code: cache-functions, captionpos=t]
 cache_t *init(const common_cache_params_t ccache_params, const char *cache_specific_params);
 
 void free(cache_t *cache);
